--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,5 @@
-<% provide(:title, 'All users') %>
-<h1>All users</h1>
+<h1>Usuarios</h1>
+<hr>
+<br>
 
-<ul class="users">
-    <%= render 'users/user' %>
-</ul>
+<%= render 'users/user' %>
