--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,27 +1,36 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container">
-        <%= link_to "Home aplicación", root_path, id: "logo" %>
-        <nav>
-            <ul class="nav navbar-nav navbar-right">
-                <% if logged_in? %>
-                    <li><%= link_to "Add user", new_user_path %></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Account <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><%= link_to "Profile", current_user %></li>
-                            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-                            <li class="divider"></li>
-                            <li>
-                                <%= link_to "Log out", logout_path, method: "delete" %>
-                            </li>
-                        </ul>
-                    </li>
-                <% else %>
-                    <li><%= link_to "Log in", login_path %></li>
-                <% end %>
+<header>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <% if logged_in? %>
+                        <%= link_to "Home aplicación", users_path, class: 'navbar-brand' %>
+                    <% else %>
+                        <%= link_to "Home aplicación", root_path, class: 'navbar-brand' %>
+                    <% end %>
+                </li>
             </ul>
-        </nav>
-    </div>
+            <ul class="navbar-nav navbar-right">
+                <% if logged_in? %>
+                    <li><%= link_to "Agregar usuario", new_user_path, class: 'btn btn-outline-info my-2 my-sm-0' %></li>
+                    <div class="btn-group" role="group">
+                        <button id="btnGroupDrop1" type="button" class="btn btn-outline-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Cuenta
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                            <li><%= link_to "Perfil", current_user, class: 'dropdown-item' %></li>
+                            <li><%= link_to "Editar perfil", edit_user_path(current_user), class: 'dropdown-item' %></li>
+                            <li class="dropdown-divider"></li>
+                            <li><%= link_to "Cerrar sesión", logout_path, method: "delete", class: 'dropdown-item' %></li>
+                        </div>
+                    </div>
+                <% else %>
+                <li class="nav-item">
+                    <%= link_to "Registrarse", signup_path, class: 'btn btn-info my-2 my-sm-0' %>
+                    <%= link_to "Iniciar sesión", login_path, class: 'btn btn-info my-2 my-sm-0' %>
+                </li>
+                <% end %>
+            </ul> 
+      </div>       
+    </nav>
 </header>
